change input cmp css

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,11 +28,33 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+.App-main {
+  background-color: yellow;
+  min-height: 90vh;
+  display: inline-flexbox;
+  flex-direction: column;
+  justify-content:center
+}
+
+.Json-input-container {
+  background-color: green;
+  /* display: inline-flexbox; */
+  /* display: flex; */
+  max-width: 40%;
+}
+
+.Ts-output-container {
+  background-color: blueviolet;
+  /* display: inline-flexbox; */
+  /* display: flex; */
+  max-width: 40%;
+}
+
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
